<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.add_new_task.AddNewTaskFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_save">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_title_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_input_title_task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_task"
                    android:textColorHint="?colorSecondary"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_description_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/text_input_title_task">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_input_description_task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:minLines="4"
                    android:hint="@string/description_task"
                    android:textColorHint="?colorSecondary"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_select_date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/text_input_description_task">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_select_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@android:drawable/ic_menu_my_calendar"
                    android:drawablePadding="4dp"
                    android:drawableTint="?colorPrimary"
                    android:hint="@string/select_date"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:textColor="?colorPrimary"
                    android:textColorHint="?colorSecondary"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_time_picked"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:drawableLeft="@android:drawable/ic_lock_idle_alarm"
                android:drawableTint="?colorPrimary"
                android:text="@string/pick_time"
                android:gravity="center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/switch_time_picker"
                app:layout_constraintTop_toTopOf="@id/switch_time_picker"
                app:layout_constraintBottom_toBottomOf="@id/switch_time_picker"/>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checked="false"
                app:layout_constraintTop_toBottomOf="@id/edit_text_select_date_layout"
                app:layout_constraintStart_toEndOf="@id/tv_time_picked"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:id="@+id/button_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_save"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button"
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/save"
        android:enabled="false"
        app:layout_constraintStart_toEndOf="@id/button_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
