<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_detail_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_title_label"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Title Task"/>

        <TextView
            android:id="@+id/tv_detail_desc_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_title"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_detail_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_desc_label"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Description Task"/>

        <ImageView
            android:id="@+id/iv_detail_date_picked"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:importantForAccessibility="no"
            android:src="@android:drawable/ic_menu_my_calendar"
            app:tint="?colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_detail_date_picked"
            app:layout_constraintBottom_toBottomOf="@id/tv_detail_date_picked"/>
        <TextView
            android:id="@+id/tv_detail_date_picked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textStyle="bold"

            app:layout_constraintStart_toEndOf="@id/iv_detail_date_picked"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_desc"
            tools:text="Date Picked : "/>

        <ImageView
            android:id="@+id/iv_detail_time_picked"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:importantForAccessibility="no"
            android:src="@android:drawable/ic_lock_idle_alarm"
            app:tint="?colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_detail_time_picked"
            app:layout_constraintBottom_toBottomOf="@id/tv_detail_time_picked"/>

        <TextView
            android:id="@+id/tv_detail_time_picked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/time"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_detail_time_picked"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_date_picked"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>